workspace(name = "robotics_lib")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# GoogleTest dependency
http_archive(
    name = "com_google_googletest",
    urls = ["https://github.com/google/googletest/archive/refs/tags/v1.15.2.zip"], # latest stable
    strip_prefix = "googletest-1.15.2",
    sha256 = "f179ec217f9b3b3f3c6e8b02d3e7eda997b49e4ce26d6b235c9053bec9c0bf9f",
)
